Log Errores
C:\Users\Lucia\Desktop\Editor-Codigo-Python>python3 main.py --connection-string "driver={SQL Server};server=GG\SQL2019;uid=sa;pwd=sa;database=datosABEL T01 D"
WARNING: No se encontraron scripts para MODELO=T01
ERROR: Error fatal durante la carga
Traceback (most recent call last):
  File "C:\Users\Lucia\Desktop\Editor-Codigo-Python\main.py", line 392, in main
    record = db.get_record_full(key_columns, key_values)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Lucia\Desktop\Editor-Codigo-Python\db\connection.py", line 811, in get_record_full
    raise LookupError(f"No existe registro con {keys_display} en tabla {self.table}")
LookupError: No existe registro con MODELO='T01', CODIGO='' en tabla G_SCRIPT



C:\Users\Lucia\Desktop\Editor-Codigo-Python>python3 main.py --connection-string "driver={SQL Server};server=GG\SQL2019;uid=sa;pwd=sa;database=datosABEL T01 BOBINADO D"
Traceback (most recent call last):
  File "C:\Users\Lucia\Desktop\Editor-Codigo-Python\main.py", line 34, in <module>
    from db.connection import (
  File "C:\Users\Lucia\Desktop\Editor-Codigo-Python\db\__init__.py", line 4, in <module>
    from db.connection import (
  File "C:\Users\Lucia\Desktop\Editor-Codigo-Python\db\connection.py", line 238
    return result
    ^^^^^^^^^^^^^
SyntaxError: 'return' outside function
